--- a/writeup/categorical-cryptography.tex
+++ b/writeup/categorical-cryptography.tex
@@ -377,10 +377,12 @@ $X\in\cat{D}$. The \emph{resource theory of $F$-states} $\state{F}$ is the categ
 objects are $F$-states and whose morphisms $(I\xto{s} FX)\to (I\xto{t} FY)$ are
 maps $X\xto{f}Y$ in $\cat{D}$ such that $(Ff)s = t$\footnote{
   With a little more machinery: $\state{F}$ is the \emph{category of elements}
-    of the functor $\cat{D}\xto{F}\cat{C}\xto{\hom(I, -)}\scat{Set}$. The
+    of the functor $\cat{D}\xto{F}\cat{C}\xto{C(I, -)}\scat{Set}$. The
     category of elements of any lax monoidal functor has a canonical monoidal
     structure on it induced by that of the codomain; this is the monoidal
-    structure with which we endow $\state{F}$.
+    structure with which we endow $\state{F}$. Observe the similarity of the
+    tensor in $\state{F}$ with the coherence map for the functor $C(I, -)$
+    from \Cref{ex:monoidal-functors}.
   }. Note what then $\cat{C} = \cat{D}$ and $F = 1_\cat{C}$, we recover
   $\state{\cat{C}}$.
 
