--- a/writeup/category-theory.tex
+++ b/writeup/category-theory.tex
@@ -1516,8 +1516,9 @@ compatibility with the symmetry: \begin{equation}\label{eqn:monoidal functor sym
 
 \begin{ex}Again, there are many familiar monoidal functors.
   \begin{itemize}
-    \item $\texttt{Maybe}$ is (lax) symmetric monoidal, but not strong monoidal.
-    \item For any monoidal category $\cat{C}$, $\cat{C}(I, -)$ is monoidal, with
+    \item $\texttt{Maybe}$ is (lax) symmetric monoidal, but not strong
+      monoidal.
+    \item \label{ex:monoidal-functors} For any monoidal category $\cat{C}$, $\cat{C}(I, -)$ is monoidal, with
       the coherence \begin{align*}
         \phi_{x,y}: \cat{C}(I, x)\times\cat{C}(I, y)&\to \cat{C}(I, x\otimes y) \\
         (f, g)
