--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -93,6 +93,7 @@
 
 \DeclareMathOperator{\ca}{ca}
 \DeclareMathOperator{\view}{view}
+\DeclareMathOperator{\exec}{exec}
 \DeclareMathOperator{\ideal}{ideal}
 \DeclareMathOperator{\ncomb}{n-comb}
 \let\state\relax
