--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -1342,3 +1342,77 @@
 	isbn = "978-3-642-11799-2",
 }
 
+@misc{benor-2004,
+	title = {General Security Definition and Composability for Quantum \&
+	         Classical Protocols},
+	author = {Michael Ben-Or and Dominic Mayers},
+	year = {2004},
+	eprint = {quant-ph/0409062},
+	archivePrefix = {arXiv},
+	primaryClass = {quant-ph},
+}
+
+@misc{unruh-2004,
+	title = {Simulatable security for quantum protocols},
+	author = {Dominique Unruh},
+	year = {2004},
+	eprint = {quant-ph/0409125},
+	archivePrefix = {arXiv},
+	primaryClass = {quant-ph},
+}
+
+@misc{canetti-2006,
+	author = {Ran Canetti},
+	title = {Security and Composition of Cryptographic Protocols: A Tutorial},
+	howpublished = {Cryptology ePrint Archive, Paper 2006/465},
+	year = {2006},
+	note = {\url{https://eprint.iacr.org/2006/465}},
+	url = {https://eprint.iacr.org/2006/465},
+}
+
+@inproceedings{lindell-2003,
+	author = {Lindell, Y.},
+	booktitle = {44th Annual IEEE Symposium on Foundations of Computer Science,
+	             2003. Proceedings.},
+	title = {General composition and universal composability in secure multi-party
+	         computation},
+	year = {2003},
+	volume = {},
+	number = {},
+	pages = {394-403},
+	keywords = {Protocols;Computer networks;Intelligent networks;Concurrent
+	            computing;Computer security;Stress;Cryptography;Random
+	            variables;Privacy;Polynomials},
+	doi = {10.1109/SFCS.2003.1238213},
+}
+
+@misc{patrignani-2022,
+	title = {Universal Composability is Robust Compilation},
+	author = {Marco Patrignani and Robert Künnemann and Riad S. Wahby},
+	year = {2022},
+	eprint = {1910.08634},
+	archivePrefix = {arXiv},
+	primaryClass = {cs.PL},
+}
+
+@misc{kidron-lindell-2007,
+	author = {Dafna Kidron and Yehuda Lindell},
+	title = {Impossibility Results for Universal Composability in Public-Key
+	         Models and with Fixed Inputs},
+	howpublished = {Cryptology ePrint Archive, Paper 2007/478},
+	year = {2007},
+	note = {\url{https://eprint.iacr.org/2007/478}},
+	url = {https://eprint.iacr.org/2007/478},
+}
+
+@inproceedings{jost-2020,
+	title = {Overcoming impossibility results in composable security using
+	         interval-wise guarantees},
+	author = {Jost, Daniel and Maurer, Ueli},
+	booktitle = {Advances in Cryptology--CRYPTO 2020: 40th Annual International
+	             Cryptology Conference, CRYPTO 2020, Santa Barbara, CA, USA, August
+	             17--21, 2020, Proceedings, Part I 40},
+	pages = {33--62},
+	year = {2020},
+	organization = {Springer},
+}
